--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express-validator": "^6.14.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.6",
-    "nanoid": "^4.0.0"
+    "nanoid": "^4.0.0",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
